--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,9 +4,11 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
+  max-width: 65%;
   padding-bottom: 64px;
 }
 
@@ -24,7 +26,20 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 25%;
+  left: 60%;
+  height: 500px;
 }
 
 .controlColumn {
+  max-width: 50%;
+}
+
+.perspective {
+  position: fixed;
+  top: 60%;
+  width: 100%;
+  height: 40%;
+  background: hsl(195deg, 20%, 86%);
 }
